# slaf

./: .coverage  .coveragerc  .cursorignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: ci.yml  docs.yml  prepare-release.yml  release.yml
api/: index.html
api/core/: index.html
api/data/: index.html
api/integrations/: index.html
api/ml/: index.html
benchmarks/: README.md  __init__.py  benchmark.py  benchmark_anndata_ops.py  benchmark_cell_filtering.py  benchmark_conversion.py  benchmark_dataloaders.py  benchmark_dataloaders_entropy.py  benchmark_dataloaders_external.py  benchmark_dataloaders_internal.py  benchmark_expression_queries.py  benchmark_gene_filtering.py  benchmark_lazy_evaluation_performance.py  benchmark_prefetcher.py  benchmark_results.json  benchmark_scaling_modal.py  benchmark_scanpy_preprocessing.py  benchmark_scdataset_multiprocessing.py  benchmark_scdataset_scaling.py  benchmark_tokenizers.py  benchmark_utils.py  comprehensive_benchmark_results.json  index.html  run_comprehensive_benchmarks.py
benchmarks/bioinformatics_benchmarks/: index.html
benchmarks/ml_benchmarks/: index.html
benchmarks/scdataset_benchmarks/: index.html
benchmarks/slaf_vs_h5ad_benchmarks/: index.html
benchmarks/slaf_vs_tiledb_benchmarks/: index.html
blog/: index.html
blog/benchmark-overhaul-plan/: index.html
blog/blazing-fast-dataloaders/: index.html
blog/blazing-fast-dataloaders-2/: index.html
blog/huggingface/: index.html
blog/introducing-slaf/: index.html
blog/refactor-dataloaders/: index.html
blog/refactor-tokenizers/: index.html
development/benchmarks/: index.html
development/contributing/: index.html
development/docstring_template/: index.html
development/maintaining/: index.html
development/marimo_template/: index.html
development/polars-integration-phase1/: index.html
docs/: DEVELOPMENT.md  index.md  test-update.md
docs/api/: core.md  data.md  index.md  integrations.md  ml.md
docs/benchmarks/: bioinformatics_benchmarks.md  index.md  ml_benchmarks.md  performance.md  scdataset_benchmarks.md  slaf_vs_h5ad_benchmarks.md  slaf_vs_tiledb_benchmarks.md
docs/blog/: blazing-fast-dataloaders-2.md  blazing-fast-dataloaders-3.md  blazing-fast-dataloaders.md  huggingface.md  index.md  introducing-slaf.md
docs/blog/drafts/: blazing-fast-dataloaders-3.md  lancedb-guest-post.md
docs/development/: benchmarks.md  ci-cd.md  contributing.md  docstring_template.md  documentation.md  index.md  maintaining.md  publishing.md
docs/examples/: 01-getting-started.html  02-lazy-processing.html  03-ml-training-pipeline.html  getting-started.md  index.md  lazy-processing.md  ml-training.md  sql-queries.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js  theme-aware-assets.js  theme-reset.js
docs/stylesheets/: extra.css  logo-theme.css
docs/user-guide/: cli.md  core-concepts.md  data-loading.md  how-slaf-works.md  index.md  migrating-to-slaf.md  sql-queries.md  troubleshooting.md
examples/: 01-getting-started.html  01-getting-started.py  02-lazy-processing.html  02-lazy-processing.py  03-ml-training-pipeline.html  03-ml-training-pipeline.py
examples/getting-started/: index.html
examples/lazy-processing/: index.html
examples/ml-training/: index.html
examples/sql-queries/: index.html
getting-started/quickstart/: index.html
javascripts/: mathjax.js
prds/: OBSP_VARP_SUPPORT_PRD.md
search/: search_index.json
slaf/: __init__.py  cli.py
slaf/core/: __init__.py  fragment_processor.py  lazy_query.py  query_optimizer.py  slaf.py  sparse_ops.py  sparse_tables.py  tabular_schema.py
slaf/data/: __init__.py  chunked_reader.py  converter.py  dataset.py  utils.py
slaf/distributed/: __init__.py  boundary.py  coordinator.py  data_source.py  dataloader.py  processor.py  shuffle.py  window.py  worker.py
slaf/integrations/: __init__.py  anndata.py  scanpy.py
slaf/ml/: __init__.py  aggregators.py  dataloaders.py  datasets.py  distributed.py  expression_preprocessor.py  samplers.py  tiledb_dataloaders.py  tokenizers.py
slides/: intro-to-slaf.html
slides/intro-to-slaf/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_aggregators.py  test_anndata.py  test_anndata_slicing.py  test_append_functionality.py  test_cell_boundary_reassembly.py  test_chunked_tiledb_layer.py  test_cli.py  test_converter.py  test_dataloaders.py  test_distributed_boundary.py  test_distributed_coordinator.py  test_distributed_data_schema.py  test_distributed_data_source.py  test_distributed_dataloader.py  test_distributed_processor.py  test_distributed_shuffle.py  test_distributed_window.py  test_distributed_worker.py  test_fragment_processing.py  test_layers_access.py  test_layers_conversion_e2e.py  test_layers_converter.py  test_layers_infrastructure.py  test_layers_matrix.py  test_layers_mutations.py  test_layers_slaf.py  test_layers_view.py  test_lazy_query.py  test_metadata_conversion_e2e.py  test_metadata_mutations.py  test_mos_integration.py  test_multifile_conversion.py  test_obs_var_view.py  test_obs_var_view_dataframe.py  test_obsp_varp.py  test_pytorch_datasets.py  test_query_optimizer.py  test_samplers.py  test_scanpy.py  (+5 more)
user-guide/: index.html
user-guide/how-slaf-works/: index.html
user-guide/migrating-to-slaf/: index.html
