[project]
name = "slaf"
version = "0.1.0"
description = "Sparse Lance Array Format - MVP for single-cell data"
authors = [{ name = "Pavan Ramkumar", email = "pavan.ramkumar@gmail.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"

dependencies = [
    # Core dependencies
    "pylance>=0.30.0",
    "duckdb>=1.3.0",
    "pyarrow>=20.0.0",
    # Scientific computing
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "scipy>=1.15.0",
    # Single-cell ecosystem
    "scanpy>=1.11.2",
    "anndata>=0.11.4",
    # Utilities
    "orjson>=3.10.15",         # Fast JSON serialization
    "tqdm>=4.67.0",            # Progress bars
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "requests>=2.32.4",
    "memory-profiler>=0.61.0",
    "lancedb>=0.24.0",
    "rich>=14.0.0",
    "torch>=2.7.1",
    # CLI
    "typer[all]>=0.9.0",
]

[project.optional-dependencies]
dev = [
    # Development tools
    "pytest>=8.0.0",

    # Marimo for demo
    "marimo>=0.14.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",

    # Benchmarking
    "memray>=1.17.0",
    "psutil>=6.0.0",
]

docs = [
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=0.4.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.8.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
]

test = ["pytest>=8.0.0", "pytest-cov>=6.2.0", "coverage>=7.9.1"]

[project.scripts]
slaf = "slaf.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["slaf"]
